--- a/resources/config/agents.yaml
+++ b/resources/config/agents.yaml
@@ -2,15 +2,15 @@ default_provider: openai
 
 providers:
   openai:
-    model_name: "gpt-3.5-turbo"
+    model_name: "gpt-4o"
     temperature: 0.7
-    max_tokens: 1000
+    max_tokens: 4000
     api_key_env: "OPENAI_API_KEY"
     
   bedrock:
     model_name: "anthropic.claude-3-sonnet-20240229-v1:0"
     temperature: 0.7
-    max_tokens: 1000
+    max_tokens: 4000
     region: "us-east-1"
     aws_access_key_env: "AWS_ACCESS_KEY_ID"
     aws_secret_key_env: "AWS_SECRET_ACCESS_KEY"
@@ -19,9 +19,13 @@ providers:
 # Available models per provider
 available_models:
   openai:
-    - "gpt-3.5-turbo"
+    - "gpt-4o"
+    - "gpt-4o-mini"
+    - "gpt-4-turbo"
     - "gpt-4"
-    - "gpt-4-turbo-preview"
+    - "gpt-4-32k"
+    - "gpt-3.5-turbo"
+    - "gpt-3.5-turbo-16k"
   bedrock:
     - "anthropic.claude-3-sonnet-20240229-v1:0"
     - "anthropic.claude-3-haiku-20240307-v1:0"
