glassbox colors + light mode

--- a/resources/ui/config.yaml
+++ b/resources/ui/config.yaml
@@ -1,24 +1,40 @@
 page_config:
-  page_title: "AI Agents Playground"
-  page_icon: "🤖"
+  page_title: "SaveGlass"
+  page_icon: "🔍"
   layout: "wide"
   initial_sidebar_state: "expanded"
 
 theme:
-  primary_color: "#2196f3"
-  secondary_color: "#9c27b0"
-  background_color: "#ffffff"
-  text_color: "#000000"
+  light:
+    primary_color: "#251B9C"
+    secondary_color: "#7059FF"
+    background_color: "#ffffff"
+    text_color: "#2D2D2D"
+  dark:
+    primary_color: "#7059FF"
+    secondary_color: "#ADA6FF"
+    background_color: "#1E1E1E"
+    text_color: "#E0E0E0"
 
 chat_styling:
-  user_message:
-    background_color: "#e3f2fd"
-    border_color: "#2196f3"
-    border_width: "4px"
-  assistant_message:
-    background_color: "#f3e5f5"
-    border_color: "#9c27b0"
-    border_width: "4px"
+  light:
+    user_message:
+      background_color: "#F8F7FF"
+      border_color: "#251B9C"
+      border_width: "4px"
+    assistant_message:
+      background_color: "#C7C2FF"
+      border_color: "#7059FF"
+      border_width: "4px"
+  dark:
+    user_message:
+      background_color: "#2D2B4A"
+      border_color: "#7059FF"
+      border_width: "4px"
+    assistant_message:
+      background_color: "#3A3556"
+      border_color: "#ADA6FF"
+      border_width: "4px"
   message_padding: "1rem"
   message_border_radius: "0.5rem"
   message_margin_bottom: "1rem"
@@ -42,13 +58,13 @@ sidebar:
       update_button_text: "Update Agent Config"
 
 messages:
-  welcome_message: "Welcome to the AI Agents Playground! Ask questions, request data analysis, or generate plots."
+  welcome_message: "Welcome to SaveGlass! Ask questions about your AWS costs, request data analysis, or generate plots."
   thinking_spinner: "Thinking..."
   error_prefix: "Error: "
   success_config_update: "Agent configuration updated!"
   warning_no_credentials: "API credentials not configured. Please set the appropriate environment variables."
 
-input_placeholder: "Ask me anything... (try: 'generate a sales chart' or 'analyze data trends')"
+input_placeholder: "Ask me anything about your AWS costs... (try: 'Which service cost me the most last month?' or 'analyze cost trends')"
 
 example_questions:
   enabled: true
