--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,6 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "PyYAML>=6.0.0",
     "pydantic>=2.0.0",
+    "passlib>=1.7.4",
+    "bcrypt>=4.0.0",
 ]
